# PaleoBeasts

./: .gitignore  LICENSE  PACKAGE_OVERVIEW.md  README.md  env.yml  env_jpl.yml  env_setup_readme.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: pytest.yml
notebooks/: Ganopolski2024_demo.ipynb  Ganopolski2024_strict_contract_validation.ipynb  L96-two-scale-description.ipynb  daisyworld_demo.ipynb  downsample_demo.ipynb  ebm_demo.ipynb  lorenz63_demo.ipynb  lorenz96_demo.ipynb  lorenz_demo.ipynb  melcher2025_do_demo.ipynb  methane_d13c_demo.ipynb  model_noise_demo.ipynb  model_solver_choice_G24.ipynb  noise_demo.ipynb  river_permafrost_fig6_demo.ipynb  stocker2003_bipolar_seesaw_demo.ipynb  stocker2003_extended_seaice_demo.ipynb  stommel_demo.ipynb
notebooks/data/: model_data.csv  river_permafrost_spinup_state.npz  river_temperature_output.csv
notebooks/figures/: Ganopolski2024_demo_from_vector.ipynb
paleobeasts/: __init__.py
paleobeasts/core/: __init__.py  forcing.py  pbmodel.py
paleobeasts/data/: insolation.csv  river_permafrost_fig6_example.csv
paleobeasts/signal_models/: __init__.py  daisyworld.py  ebm.py  forcing.py  g24.py  insolation.py  lorenz.py  lorenz96.py  melcher2025_do.py  methane_d13c.py  pbmodel.py  river_permafrost.py  solver_util.py  stocker2003_bipolar_seesaw.py  stommel.py
paleobeasts/tests/: conftest.py  test_core_forcing.py  test_core_pbmodel.py  test_core_pbmodel_time_axis.py  test_signal_models_daisyworld.py  (+11 more)
signal_models/: forcing.py  g24.py  ganopolski2024.py  solver_util.py
utils/: downsample.py  noise.py
(+43 files in other folders)
