[project]
name = "paleobeasts"
version = "0.1.0"
description = "PaleoBeasts: A package for generating synthetic paleoclimate data"
requires-python = ">=3.11"
readme = "README.md"
license = { text = "GPL-3.0" }
authors = [
    { name = "Jordan Landers" }
]

dependencies = [
    "pandas",
    "pyarrow",
    "matplotlib",
    "seaborn",
    "PyYAML",
    "cloudpickle",
    "joblib",
    "pyleoclim",
    "statsmodels",
    "scipy",
    "xarray",
]
#@ git+https://github.com/jordanplanders/pyEDM.git@5defad56bab1d673a38f6b375a78d7319ac1c8e1
[tool.setuptools.packages.find]
where = ["."]
include = ["paleobeasts"]
#exclude = ["archive2*"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
